<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/dashboardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Teacher Dashboard"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="16dp" />

    <TextView
        android:id="@+id/announcementTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Announcements"
        android:textSize="18sp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/dashboardTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewAnnouncements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/announcementTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="8dp" />

    <TextView
        android:id="@+id/textViewTasksDueToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewAnnouncements"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintVertical_bias="0.278" />

    <Button
        android:id="@+id/buttonAddTask"
        android:layout_width="116dp"
        android:layout_height="41dp"
        app:layout_constraintTop_toBottomOf="@id/textViewTasksDueToday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintVertical_bias="0.314" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTasksDueToday"
        android:layout_width="411dp"
        android:layout_height="211dp"
        app:layout_constraintTop_toBottomOf="@id/buttonAddTask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewWeeklyCalendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewTasksDueToday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
