<!-- res/layout/task_item.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <CheckBox
        android:id="@+id/checkBoxTask"
        android:layout_width="37dp"
        android:layout_height="37dp" />

    <TextView
        android:id="@+id/task_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:paddingStart="10dp"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/task_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:paddingStart="10dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/task_due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:paddingStart="10dp"
        android:textSize="14sp" />
    <Button
        android:id="@+id/buttonEditTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit" />
</LinearLayout>